Reducing jre size using strip